--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html lang="tr">
-<head>
+<head> 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Nazif Gürkan Şen</title>
@@ -25,7 +25,13 @@
     <img src="profil.jpg" alt="Nazif Gürkan Şen">
     <a class="button" href="https://instagram.com/nazifgürkanşen" target="_blank">Instagram</a>
     <a class="button" href="mailto:snazifgurkan@gmail.com">Mail Gönder</a>
-  </main>
+  </main><section id="about" class="about-section">
+  <h2>Hakkımda</h2>
+  <p>
+    Merhaba, ben Nazif Gürkan Şen. Yazılım geliştirmeye ilgi duyuyorum ve web geliştirme alanında kendimi geliştiriyorum. Bu portfolyo sitesi aracılığıyla çalışmalarımı ve yeteneklerimi paylaşmayı amaçlıyorum.
+  </p>
+</section>
+
   <script>
     function toggleProfile() {
       var profile = document.getElementById('profile');
