--- a/index.html
+++ b/index.html
@@ -15,6 +15,24 @@
     a.button { display: inline-block; padding: 0.5rem 1rem; margin: 0.5rem; background: #333; color: white; text-decoration: none; border-radius: 5px; transition: background 0.3s; }
     a.button:hover { background: #555; }
     footer { background: #222; color: #fff; text-align: center; padding: 1rem; position: fixed; bottom: 0; width: 100%; }
+    .about-section {
+  background: #111;
+  color: #fff;
+  padding: 1rem;
+  margin-top: 1rem;
+  border-radius: 10px;
+}
+
+.about-section h2 {
+  margin-bottom: 0.5rem;
+  font-size: 1.5rem;
+}
+
+.about-section p {
+  font-size: 1rem;
+  line-height: 1.6;
+}
+
   </style>.about-section {
   background: #111;
   color: #fff;
