--- a/index.html
+++ b/index.html
@@ -2,116 +2,221 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nazif Gürkan Şen | Portfolyo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Nazif Gürkan Şen - Portfolyo</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
+    * {
+      box-sizing: border-box;
       margin: 0;
       padding: 0;
-      background: white;
-      color: black;
-      transition: background 0.3s, color 0.3s;
     }
 
-    body.dark {
-      background: #121212;
-      color: #f0f0f0;
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+      color: #333;
+      line-height: 1.6;
+      transition: background-color 0.3s, color 0.3s;
+      padding-bottom: 60px;
+      scroll-behavior: smooth;
     }
 
     header {
-      background: #007acc;
+      background-color: #0077cc;
       color: white;
-      padding: 15px;
+      padding: 1rem;
       text-align: center;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
     }
 
     header h1 {
-      margin: 0;
       cursor: pointer;
+    }
+
+    header button {
+      margin-top: 0.5rem;
+      padding: 0.5rem 1rem;
+      background-color: white;
+      color: #0077cc;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    nav.bottom-nav {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background-color: #0077cc;
+      display: flex;
+      justify-content: space-around;
+      padding: 0.5rem 0;
+      z-index: 1000;
+    }
+
+    nav.bottom-nav a {
+      color: white;
+      text-decoration: none;
+      font-size: 0.9rem;
+    }
+
+    main#profile {
+      text-align: center;
+      padding: 1rem;
+    }
+
+    main#profile img {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      margin-bottom: 1rem;
     }
 
     .button {
       display: inline-block;
-      margin: 10px 5px;
-      padding: 8px 15px;
-      background: #007acc;
+      margin: 0.5rem;
+      padding: 0.5rem 1rem;
+      background-color: #0077cc;
       color: white;
       text-decoration: none;
       border-radius: 5px;
     }
 
-    main, section {
-      padding: 20px;
+    .about-section {
+      padding: 1.5rem;
     }
 
-    #profile {
-      display: none;
-      text-align: center;
-    }
-
-    #profile img {
-      max-width: 150px;
-      border-radius: 50%;
+    .projects-section {
+      margin-top: 2rem;
     }
 
     .project-card {
-      border: 1px solid #ccc;
+      background-color: white;
+      border: 1px solid #ddd;
       border-radius: 10px;
-      padding: 10px;
-      margin: 10px 0;
+      padding: 1rem;
+      margin-top: 1rem;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s;
     }
 
-    /* Mobil uyum */
-    @media (max-width: 600px) {
-      header h1 {
-        font-size: 18px;
-      }
-      .button {
-        display: block;
-        margin: 10px auto;
-      }
+    .project-card:hover {
+      transform: translateY(-5px);
     }
 
-    .theme-toggle {
-      position: fixed;
-      top: 10px;
-      right: 10px;
-      background: #444;
-      color: white;
-      border: none;
-      padding: 8px 12px;
+    .skills-section {
+      padding: 1rem 1.5rem;
+    }
+
+    .skill {
+      margin-bottom: 1rem;
+    }
+
+    .skill-name {
+      font-weight: bold;
+      margin-bottom: 0.2rem;
+    }
+
+    .skill-bar {
+      width: 100%;
+      background-color: #ddd;
       border-radius: 5px;
-      cursor: pointer;
+      overflow: hidden;
+    }
+
+    .skill-bar-fill {
+      height: 12px;
+      background-color: #0077cc;
+      width: 0;
+      transition: width 1s ease-in-out;
+    }
+
+    /* Karanlık tema */
+    .dark-theme {
+      background-color: #121212;
+      color: #f4f4f4;
+    }
+
+    .dark-theme header,
+    .dark-theme nav.bottom-nav {
+      background-color: #1e1e1e;
+    }
+
+    .dark-theme .button,
+    .dark-theme nav.bottom-nav a {
+      background-color: #333;
+      color: #f4f4f4;
+    }
+
+    .dark-theme .project-card {
+      background-color: #1e1e1e;
+      border-color: #444;
     }
   </style>
 </head>
 <body>
-
-  <button class="theme-toggle" onclick="toggleTheme()">Tema</button>
-
   <header>
     <h1 onclick="toggleProfile()">Nazif Gürkan Şen</h1>
+    <button onclick="toggleTheme()">Tema Değiştir</button>
   </header>
 
-  <main id="profile">
+  <main id="profile" style="display: none;">
     <img src="profil.jpg" alt="Nazif Gürkan Şen">
-    <br>
-    <a class="button" href="https://instagram.com/">Instagram</a>
-    <a class="button" href="mailto:snazifgurkan@gmail.com">Mail Gönder</a>
+    <a class="button" href="https://instagram.com">Instagram</a>
+    <a class="button" href="mailto:snazifgurkan@gmail.com">E-posta</a>
   </main>
 
   <section id="about" class="about-section">
     <h2>Hakkımda</h2>
-    <p>Merhaba, ben Nazif Gürkan Şen. Yazılıma ilgi duyuyorum, kendimi geliştiriyor ve projeler üretiyorum.</p>
+    <p>Merhaba, ben Nazif Gürkan Şen. Yazılım geliştirici adayıyım ve bu portfolyo benim çalışmalarımı sergilemek için oluşturulmuştur.</p>
+  </section>
+
+  <section id="skills" class="skills-section">
+    <h2>Yetenekler</h2>
+    <div class="skill">
+      <div class="skill-name">HTML</div>
+      <div class="skill-bar"><div class="skill-bar-fill" style="width: 90%"></div></div>
+    </div>
+    <div class="skill">
+      <div class="skill-name">CSS</div>
+      <div class="skill-bar"><div class="skill-bar-fill" style="width: 80%"></div></div>
+    </div>
+    <div class="skill">
+      <div class="skill-name">JavaScript</div>
+      <div class="skill-bar"><div class="skill-bar-fill" style="width: 70%"></div></div>
+    </div>
   </section>
 
   <section id="projects" class="projects-section">
     <h2>Projelerim</h2>
     <div class="project-card">
       <h3>Örnek Proje 1</h3>
-      <p>Bu proje HTML ve CSS kullanılarak yapılmıştır.</p>
+      <p>Bu proje HTML ve CSS kullanılarak yapıldı.</p>
     </div>
     <div class="project-card">
       <h3>Örnek Proje 2</h3>
-      <p>JavaScript ile
+      <p>JavaScript ile etkileşimli bir uygulama geliştirildi.</p>
+    </div>
+  </section>
+
+  <nav class="bottom-nav">
+    <a href="#about">Hakkımda</a>
+    <a href="#skills">Yetenekler</a>
+    <a href="#projects">Projeler</a>
+  </nav>
+
+  <script>
+    function toggleProfile() {
+      const profile = document.getElementById("profile");
+      profile.style.display = profile.style.display === "none" ? "block" : "none";
+    }
+
+    function toggleTheme() {
+      document.body.classList.toggle("dark-theme");
+    }
+  </script>
+</body>
+</html>
