--- a/index.html
+++ b/index.html
@@ -3,28 +3,26 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Nazif Gürkan Şen - Portfolyo</title>
+  <title>Nazif Gürkan Şen | Portfolyo</title>
   <style>
     * {
-      box-sizing: border-box;
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
+      scroll-behavior: smooth;
     }
 
     body {
       font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
+      background: #fff;
       color: #333;
       line-height: 1.6;
-      transition: background-color 0.3s, color 0.3s;
-      padding-bottom: 60px;
-      scroll-behavior: smooth;
     }
 
     header {
-      background-color: #0077cc;
-      color: white;
-      padding: 1rem;
+      background: #111;
+      color: #fff;
+      padding: 20px;
       text-align: center;
       position: sticky;
       top: 0;
@@ -33,190 +31,168 @@
 
     header h1 {
       cursor: pointer;
+      transition: color 0.3s;
     }
 
-    header button {
-      margin-top: 0.5rem;
-      padding: 0.5rem 1rem;
-      background-color: white;
-      color: #0077cc;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
+    header h1:hover {
+      color: #f39c12;
     }
 
-    nav.bottom-nav {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      background-color: #0077cc;
-      display: flex;
-      justify-content: space-around;
-      padding: 0.5rem 0;
-      z-index: 1000;
-    }
-
-    nav.bottom-nav a {
-      color: white;
-      text-decoration: none;
-      font-size: 0.9rem;
-    }
-
-    main#profile {
+    .profile {
       text-align: center;
-      padding: 1rem;
+      margin-top: 30px;
     }
 
-    main#profile img {
-      width: 120px;
-      height: 120px;
+    .profile img {
+      width: 150px;
       border-radius: 50%;
-      margin-bottom: 1rem;
+      border: 4px solid #f39c12;
+      transition: transform 0.3s ease;
     }
 
-    .button {
+    .profile img:hover {
+      transform: scale(1.05);
+    }
+
+    .instagram-button {
       display: inline-block;
-      margin: 0.5rem;
-      padding: 0.5rem 1rem;
-      background-color: #0077cc;
-      color: white;
+      margin-top: 10px;
+      padding: 10px 20px;
+      background: #E1306C;
+      color: #fff;
+      border: none;
+      border-radius: 20px;
       text-decoration: none;
-      border-radius: 5px;
+      transition: background 0.3s;
     }
 
-    .about-section {
-      padding: 1.5rem;
+    .instagram-button:hover {
+      background: #c1275b;
     }
 
-    .projects-section {
-      margin-top: 2rem;
+    section {
+      padding: 60px 20px;
+      max-width: 900px;
+      margin: auto;
     }
 
-    .project-card {
-      background-color: white;
-      border: 1px solid #ddd;
-      border-radius: 10px;
-      padding: 1rem;
-      margin-top: 1rem;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-      transition: transform 0.3s;
+    section h2 {
+      font-size: 28px;
+      margin-bottom: 20px;
+      text-align: center;
+      color: #f39c12;
     }
 
-    .project-card:hover {
-      transform: translateY(-5px);
+    /* Hakkımda ve Yetenekler */
+    .about-container {
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
     }
 
-    .skills-section {
-      padding: 1rem 1.5rem;
+    .about-text {
+      font-size: 18px;
+    }
+
+    .skills h3 {
+      margin-bottom: 10px;
     }
 
     .skill {
-      margin-bottom: 1rem;
+      margin-bottom: 20px;
     }
 
-    .skill-name {
+    .skill span {
+      display: block;
       font-weight: bold;
-      margin-bottom: 0.2rem;
+      margin-bottom: 5px;
     }
 
-    .skill-bar {
+    .bar {
       width: 100%;
-      background-color: #ddd;
+      background: #ddd;
+      height: 10px;
       border-radius: 5px;
       overflow: hidden;
     }
 
-    .skill-bar-fill {
-      height: 12px;
-      background-color: #0077cc;
+    .fill {
+      height: 10px;
       width: 0;
-      transition: width 1s ease-in-out;
+      background: #4CAF50;
+      border-radius: 5px;
+      animation: fillAnim 2s forwards;
     }
 
-    /* Karanlık tema */
-    .dark-theme {
-      background-color: #121212;
-      color: #f4f4f4;
+    .fill.html { width: 90%; background: #e44d26; }
+    .fill.css { width: 85%; background: #264de4; }
+    .fill.js { width: 70%; background: #f0db4f; }
+
+    @keyframes fillAnim {
+      from { width: 0; }
     }
 
-    .dark-theme header,
-    .dark-theme nav.bottom-nav {
-      background-color: #1e1e1e;
+    footer {
+      text-align: center;
+      padding: 20px;
+      background: #111;
+      color: #fff;
     }
 
-    .dark-theme .button,
-    .dark-theme nav.bottom-nav a {
-      background-color: #333;
-      color: #f4f4f4;
-    }
-
-    .dark-theme .project-card {
-      background-color: #1e1e1e;
-      border-color: #444;
+    /* Responsive */
+    @media (max-width: 768px) {
+      .about-container {
+        flex-direction: column;
+      }
     }
   </style>
 </head>
 <body>
+
   <header>
-    <h1 onclick="toggleProfile()">Nazif Gürkan Şen</h1>
-    <button onclick="toggleTheme()">Tema Değiştir</button>
+    <h1 onclick="scrollToTop()">Nazif Gürkan Şen</h1>
   </header>
 
-  <main id="profile" style="display: none;">
-    <img src="profil.jpg" alt="Nazif Gürkan Şen">
-    <a class="button" href="https://instagram.com">Instagram</a>
-    <a class="button" href="mailto:snazifgurkan@gmail.com">E-posta</a>
-  </main>
+  <div class="profile">
+    <img src="https://raw.githubusercontent.com/NazifGurkanSen/nazifgurkansen/main/resim.jpg" alt="Nazif Gürkan Şen">
+    <br>
+    <a href="https://instagram.com/nazifgurkansen" target="_blank" class="instagram-button">Instagram</a>
+  </div>
 
-  <section id="about" class="about-section">
+  <section id="about" class="about">
     <h2>Hakkımda</h2>
-    <p>Merhaba, ben Nazif Gürkan Şen. Yazılım geliştirici adayıyım ve bu portfolyo benim çalışmalarımı sergilemek için oluşturulmuştur.</p>
-  </section>
-
-  <section id="skills" class="skills-section">
-    <h2>Yetenekler</h2>
-    <div class="skill">
-      <div class="skill-name">HTML</div>
-      <div class="skill-bar"><div class="skill-bar-fill" style="width: 90%"></div></div>
-    </div>
-    <div class="skill">
-      <div class="skill-name">CSS</div>
-      <div class="skill-bar"><div class="skill-bar-fill" style="width: 80%"></div></div>
-    </div>
-    <div class="skill">
-      <div class="skill-name">JavaScript</div>
-      <div class="skill-bar"><div class="skill-bar-fill" style="width: 70%"></div></div>
-    </div>
-  </section>
-
-  <section id="projects" class="projects-section">
-    <h2>Projelerim</h2>
-    <div class="project-card">
-      <h3>Örnek Proje 1</h3>
-      <p>Bu proje HTML ve CSS kullanılarak yapıldı.</p>
-    </div>
-    <div class="project-card">
-      <h3>Örnek Proje 2</h3>
-      <p>JavaScript ile etkileşimli bir uygulama geliştirildi.</p>
+    <div class="about-container">
+      <div class="about-text">
+        <p>Merhaba, ben Nazif Gürkan Şen. Web geliştirme alanında kendimi geliştiriyorum. HTML, CSS ve JavaScript başta olmak üzere modern teknolojilerle portfolyo projeleri üretiyorum.</p>
+        <p>Amacım kullanıcı dostu ve modern web sayfaları geliştirmek.</p>
+      </div>
+      <div class="skills">
+        <h3>Yeteneklerim</h3>
+        <div class="skill">
+          <span>HTML</span>
+          <div class="bar"><div class="fill html"></div></div>
+        </div>
+        <div class="skill">
+          <span>CSS</span>
+          <div class="bar"><div class="fill css"></div></div>
+        </div>
+        <div class="skill">
+          <span>JavaScript</span>
+          <div class="bar"><div class="fill js"></div></div>
+        </div>
+      </div>
     </div>
   </section>
 
-  <nav class="bottom-nav">
-    <a href="#about">Hakkımda</a>
-    <a href="#skills">Yetenekler</a>
-    <a href="#projects">Projeler</a>
-  </nav>
+  <footer>
+    © 2025 Nazif Gürkan Şen | Tüm Hakları Saklıdır
+  </footer>
 
   <script>
-    function toggleProfile() {
-      const profile = document.getElementById("profile");
-      profile.style.display = profile.style.display === "none" ? "block" : "none";
-    }
-
-    function toggleTheme() {
-      document.body.classList.toggle("dark-theme");
+    function scrollToTop() {
+      window.scrollTo({ top: 0, behavior: 'smooth' });
     }
   </script>
+
 </body>
 </html>
